--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,7 +12,8 @@
     "@heroicons/react": "^2.0.18",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/node": "^20",
